--- a/JAOTT/JAOTT.csproj
+++ b/JAOTT/JAOTT.csproj
@@ -205,6 +205,11 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Mission.cs" />
+    <Compile Include="Models\Program.cs" />
+    <Compile Include="Models\Request.cs" />
+    <Compile Include="Models\Teacher.cs" />
+    <Compile Include="Models\Volunteer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
